$Id$

2009-05-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Upgraded for autoconf 2.61

2009-03-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Added macros to detect compiler support for
	 -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security.

	* configure.ac: Conditionally enable compiler flags for
	 -fstack-protect, -D_FORTIFY_SOURCE and -Wformat-security using
	 the new acinclude.m4 autoconf macros.

	* configure.ac: Incremented version to 1.9.2

2008-09-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Improved the description of the --trans option in
	  the help output.

	* wrappers.c: Modified Strtoul so it only permits fully convertable
	  strings.  This avoids the problem mentioned by ML with 1=7/128
	  in an advanced transform specification.

	* ike-scan.c: Corrected those calls to Strtoul that assumed the old
	  behaviour, where a string could be terminated by any non convertable
	  character.

	* check-packet, pkt-custom-proposal.dat: Corrected the advanced
	  transform specification, and added an additional transform using
	  variable length attributes.

2008-03-07 Roy Hills <Roy.Hills@nta-monitor.com>

	* isakmp.c: Added additional XAUTH authentication methods to auth_map.

	* ike-backoff-patterns: Added Cisco PIX 7.0

	* ike-vendor-ids: Added Windows 2008 server

2007-06-09 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-error: new checking script to test response to error
          conditions.

2007-04-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* utils.c: New function "dupstr", which is a local implementation
	  of the common but non-standard library function "strdup".

	* ike-scan.c: Replace calls to malloc/strcpy with calls to the
	  new dupstr function.  This makes the code tidier and also reduces
	  the number of calls to the potentially dangerous strcpy function.

2007-04-17 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.h: Undefined SYSLOG, as we don't use this any more, and I